Changelog
=========


1.0a11
------

* Changed margin for div zug_byline
  [eschmutz]

* Changed layout for dashboard-portlets
  [eschmutz]

* Changed layout for function-/info-bar
  [eschmutz]

* Changed interface for folder_overview-view from Products.Archetypes.interfaces._base.IBaseObject to
  Products.Archetypes.interfaces.IBaseObject"
  [eschmutz]

* Added view folder_overview for izug-specific skin-layer to handle sprites in collections
  [eschmutz]

* Added izugspecifig contentmenu link-hover color
  [eschmutz]

* Added better comment for contentmenu-adapter-class
  [eschmutz]

* IIzugSpecific inherits now from IThemeSpecific and no longer from IDefaultPloneLayer and added zcml condition for ZugPersonalBar-Viewlet
  [eschmutz]

* Added adapter for plone.contentmenu to handle sprites in the contentmenu
  [eschmutz]

* Issue #1553 Behoerden - Anzeige Prozesslandkarte     
  https://extranet.4teamwork.ch/support/zug/maintlog/1553
  [ttschanz]

* Customized plone collection portlet with z3c.jbot in order to remove the image
  tag
  [fsprenger]

* Added 'navTreeItem' class to first navigation element if navigation is set to show
  the top element
  [fsprenger]

* Added zug specific collapsible style with reference implementation in
  test_uielements
  [fsprenger]

* Added styles for izug.meeting add-form
  [eschmutz]

* Added styles for globalstatusmessage in izug.css
  [eschmutz]

* Styling for calendar in tabbedview
  [12.08.2011, florian.sprenger]

* removed css styling for destructive css class and removed backgroundimage for comments
  [eschmutz]

* Fixed specific css for newspaper portlet. 
  [12.08.2011, mathias.leimgruber]

* added specific css for newspaper portlet
  [eschmutz]

* replacing ftw.contentmenu with izug menu in izug layer - import step and
  manual verification of viewlet order required!
  [fsprenger]

* added izug specific browserlayer: izug.basetheme.izug
  [fsprenger]
