@@ -7,6 +7,7 @@
     i18n_domain="izug.basetheme">
 
   <five:registerPackage package="." initialize=".initialize" />
+  <include package="plone.browserlayer" />
 
   <!-- for plone 4 only -->
   <i18n:registerTranslations 
